Attempt at fixing the table spacing.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 	width: 260px;
 }
 
-table download {
+table {
 	border:1;
 	cellpadding:3;
 }
